Resolves: tdf#143909 some gtk im need to see key release

e.g. GTK_IM_MODULE="gtk-im-context-simple" GDK_BACKEND=x11 and
ctrl+shift+u followed by hex digits in writer comments

Change-Id: I0da17b8e18b088789cb6359610473da22c9c70af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182703
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit cb42d9e8a5246973921cfbd43d2e76afde85798a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182717
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>